--- a/src/SingleApplication.module.css
+++ b/src/SingleApplication.module.css
@@ -1,6 +1,6 @@
 .SingleApplication {
   display: grid;
-  grid-template-columns: 15% 15% auto 15% 15% 15%;
+  grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr;
   padding: 20px;
 
   background-color: white;
@@ -11,8 +11,19 @@
 
 .cell {
   text-align: left;
-  border-right: 1px solid #eee;
   padding: 0 15px;
+  box-sizing: border-box;
+  position: relative; 
+}
+
+.cell divider {
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  height: 1px;
+  border-bottom: 1px solid #eee;
+  content: "";
 }
 
 .cell sub {
@@ -20,4 +31,28 @@
   font-size: 0.8rem;
   color: #999;
   margin-bottom: 5px;
+}
+
+@media (max-width: 768px) {
+  .SingleApplication {
+    display: block;
+    margin-left: 15px;
+    margin-right: 15px;
+    margin-bottom: 1rem;
+  }
+
+  .cell {
+    display: flex;
+    flex-direction: column;
+    padding: 15px;
+  }
+
+  .cell:not(:last-child)::after {
+    content: ""; /* create a pseudo-element */
+    display: block;
+    height: 1px;
+    border-bottom: 1px solid #eee;
+    margin-top: 1rem;
+    margin-bottom: -1px;
+  }
 }
