--- a/src/ui/Button/Button.module.css
+++ b/src/ui/Button/Button.module.css
@@ -9,6 +9,10 @@
   text-align: center;
   white-space: nowrap;
   transition: background-color 0.3s;
+  margin: 0 auto;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 .button:focus {
